--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@lens-protocol/react": "^0.1.1",
+    "@lens-protocol/wagmi": "^0.1.1",
     "@next/font": "13.1.1",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -27,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4",
+    "wagmi": "^0.10.1",
     "xstate": "^4.35.1"
   }
 }
