--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4",
-    "wagmi": "^0.10.1",
+    "wagmi": "^0.10.2",
     "xstate": "^4.35.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
