--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lens-protocol/wagmi": "^0.1.1",
     "@next/font": "13.1.1",
     "@rainbow-me/rainbowkit": "^0.8.1",
+    "@szhsin/react-menu": "^3.3.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
