--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "typescript": "4.9.4",
     "wagmi": "^0.10.2",
     "xstate": "^4.35.1"
